--- a/blank.html
+++ b/blank.html
@@ -5,25 +5,14 @@
     <title>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</title>
   </head>
   <body>
-
-    <header>
+    <p>Данная страница находиться в разработке</p>
 	    <section>
-            <a><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
-			<button type="button">Поиск:</button>
-			<p>Закладки: 0</p>
-			<p>Корзина: 0</p>
-			<a href="blank.html">Оформить заказ</a>
+            <a>
+                <img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»">
+            </a>
 		</section>
 		<section>
-		    <p>Интернет-магазин<br>
-			   строительных материалов<br>
-			   и инструментов для ремонта</p>
-			<p>
-			    <a href="tel:+78125550555">+7 (812) 555-05-55</a><br>
-				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-			</p>
-			<a href="blank.html">Вход</a>
-			<a href="blank.html">Регистрация</a>
+		    
 		</section>
 		<nav>	
             <ul>
@@ -37,14 +26,7 @@
             </ul>
        </nav>
 	</header>
-	
-	<main>
-  
-    </main>
-	
-	<footer>
-	
-	</footer>
-
+ 
+    </main
   </body>
 </html>
