Добавил Промо-блок в main

--- a/index.html
+++ b/index.html
@@ -39,7 +39,63 @@
 	</header>
 	
 	<main>
-  
+	
+        <h1>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</h1>
+		
+		<section>
+		    <ul>
+                <li>				    
+				    <h2>Материалы</h2>
+					<a href="blank.html">на любой вкус<a>					
+				</li>
+		        <li>				    
+				    <h2>Инструмент</h2>
+					<a href="blank.html">на все случаи<a>					
+				</li>
+				<li>				    
+				    <h2>Техника</h2>
+					<a href="blank.html">для стройки<a>					
+				</li>
+				<li>
+                    <div>
+					    <h2>..........</h2>
+					    <p>............</p>
+					    <a href="catalog.html">открыть каталог<a>
+						<img src="img/1.svg" width="620" height="266" alt="...............">
+					</div>
+
+                    <div>
+					    <h2>Перфораторы</h2>
+					    <p>Настоящие мужские игрушки</p>
+					    <a href="catalog.html">открыть каталог<a>
+						<img src="img/2.svg" width="620" height="266" alt="Фото рабочего с перфоратором">
+					</div>	
+				</li>
+				<li>				    
+				    <h2>Скидки 50%</h2>
+					<a href="blank.html">на 350 товаров<a>					
+				</li>
+				<li>				    
+				    <h2>Доставка</h2>
+					<a href="blank.html">бесплатно<a>					
+				</li>
+			
+		</section>
+		
+		<section>
+		     <h2>Популярные товары:<h2>
+			<a href="blank.html">все популярные товары<a>
+		</section>
+		
+		<section>
+		</section>
+		
+		<section>
+		</section>
+		
+		<section>
+		</section>
+		
     </main>
 	
 	<footer>
