Добавил блок "Популярные товары:"

--- a/index.html
+++ b/index.html
@@ -46,45 +46,85 @@
 		    <ul>
                 <li>				    
 				    <h2>Материалы</h2>
-					<a href="blank.html">на любой вкус<a>					
+					<a href="blank.html">на любой вкус</a>					
 				</li>
 		        <li>				    
 				    <h2>Инструмент</h2>
-					<a href="blank.html">на все случаи<a>					
+					<a href="blank.html">на все случаи</a>					
 				</li>
 				<li>				    
 				    <h2>Техника</h2>
-					<a href="blank.html">для стройки<a>					
+					<a href="blank.html">для стройки</a>					
 				</li>
 				<li>
                     <div>
 					    <h2>..........</h2>
 					    <p>............</p>
-					    <a href="catalog.html">открыть каталог<a>
+					    <a href="catalog.html">открыть каталог</a>
 						<img src="img/1.svg" width="620" height="266" alt="...............">
 					</div>
 
                     <div>
 					    <h2>Перфораторы</h2>
 					    <p>Настоящие мужские игрушки</p>
-					    <a href="catalog.html">открыть каталог<a>
+					    <a href="catalog.html">открыть каталог</a>
 						<img src="img/2.svg" width="620" height="266" alt="Фото рабочего с перфоратором">
 					</div>	
 				</li>
 				<li>				    
 				    <h2>Скидки 50%</h2>
-					<a href="blank.html">на 350 товаров<a>					
+					<a href="blank.html">на 350 товаров</a>					
 				</li>
 				<li>				    
 				    <h2>Доставка</h2>
-					<a href="blank.html">бесплатно<a>					
+					<a href="blank.html">бесплатно</a>					
 				</li>
-			
+			</ul>
 		</section>
 		
 		<section>
-		     <h2>Популярные товары:<h2>
-			<a href="blank.html">все популярные товары<a>
+			<div>
+				<h2>Популярные товары:</h2>
+				<a href="blank.html">все популярные товары</a>
+			</div>
+			<ul>
+				<li>
+					<a href="blank.html">
+						<img src="img/3.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
+						<span>NEW</span>
+						<h3>Перфоратор BOSCH BFG 9000</h3>
+					</a>
+						<span>32500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/4.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
+						<span>NEW</span>
+						<h3>Перфоратор BOSCH BFG 3000</h3>
+					</a>
+						<span>22500 Р.</span>
+						<button type="button">15500 Р.</button>					
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/5.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+						<span>NEW</span>
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a>
+						<span>30500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/6.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
+						<span>NEW</span>
+						<h3>Перфоратор BOSCH BFG 2000</h3>
+					</a>
+						<span></span>
+						<button type="button">12500 Р.</button>					
+				</li>
+			</ul>
 		</section>
 		
 		<section>
