Добавил блок "Популярные производители:"

--- a/index.html
+++ b/index.html
@@ -128,6 +128,52 @@
 		</section>
 		
 		<section>
+			<div>
+				<h2>Популярные производители:</h2>
+				<a href="blank.html">все производители</a>
+			</div>
+			<ul>
+				<li>
+					<a href="blank.html">
+						<img src="img/7.svg" width="220" height="145" alt="Логотип компании BOSCH">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/8.svg" width="220" height="145" alt="Логотип компании MAKITA">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/9.svg" width="220" height="145" alt="Логотип компании DeWALT">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/10.svg" width="220" height="145" alt="Логотип компании ИНТЕРСКОЛ">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/11.svg" width="220" height="145" alt="Логотип компании HITACHI">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/12.svg" width="220" height="145" alt="Логотип компании LG">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/13.svg" width="220" height="145" alt="Логотип компании AEG">
+					</a>
+				</li>
+				<li>
+					<a href="blank.html">
+						<img src="img/14.svg" width="220" height="145" alt="Логотип компании METABO">
+					</a>
+				</li>
+			</ul>
 		</section>
 		
 		<section>
