Добавил блок "Сервисы"

--- a/index.html
+++ b/index.html
@@ -177,6 +177,35 @@
 		</section>
 		
 		<section>
+			<h2>Сервисы</h2>
+			<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+			
+			<div>
+				<input type='radio' id='delivery' name='delivery' checked>
+				<label for='delivery'>Доставка</label>
+				<div>
+					<h3>Доставка</h3>
+					<p>Мы с удовольствием доставим ваш товар прямо<br> 
+						к вашему подъезду совершенно бесплатно!<br>
+						Ведь мы неплохо заработаем,<br> 
+						поднимая его на ваш этаж!</p>
+				</div>
+
+				<input type='radio' id='guarantee' name='guarantee'>
+				<label for='guarantee'>Гарантия</label>
+				<div>
+					<h3>Гарантия</h3>
+					<p></p>
+				</div>
+
+				<input type='radio' id='credit' name='credit'>
+				<label for='credit'>Кредит</label>
+				<div>
+					<h3>Кредит</h3>
+					<p></p>
+				</div>
+			</div>
 		</section>
 		
 		<section>
