--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 					<a href="blank.html">для стройки</a>					
 				</li>
 				<li>
+					<input type='radio' id='123' name='123'>
+				    <label for='123'></label>
                     <div>
 					    <h2>..........</h2>
 					    <p>............</p>
@@ -64,6 +66,8 @@
 						<img src="img/1.svg" width="620" height="266" alt="...............">
 					</div>
 
+					<input type='radio' id='124' name='124' checked>
+				    <label for='124'></label>
                     <div>
 					    <h2>Перфораторы</h2>
 					    <p>Настоящие мужские игрушки</p>
