Добавил main и catalog и попапы

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	    <section>
             <a><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
 			<button type="button">Поиск:</button>
-			<p>Закладки: 0</p>
-			<p>Корзина: 0</p>
+			<a href="blank.html">Закладки: 0</a>
+			<a href="blank.html">Корзина: 0</a>
 			<a href="blank.html">Оформить заказ</a>
 		</section>
 		<section>
@@ -22,8 +22,10 @@
 			    <a href="tel:+78125550555">+7 (812) 555-05-55</a><br>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
+			<div>
 			<a href="blank.html">Вход</a>
 			<a href="blank.html">Регистрация</a>
+			</div>
 		</section>
 		<nav>	
             <ul>
