--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,10 @@
 
     <header>
 	    <section>
-            <a><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
+            <a href="index.html"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
 			<button type="button">Поиск:</button>
-			<p>Закладки: 0</p>
-			<p>Корзина: 0</p>
+			<a href="blank.html">Закладки: 0</a>
+			<a href="blank.html">Корзина: 10</a>
 			<a href="blank.html">Оформить заказ</a>
 		</section>
 		<section>
@@ -22,8 +22,13 @@
 			    <a href="tel:+78125550555">+7 (812) 555-05-55</a><br>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
-			<a href="blank.html">Вход</a>
-			<a href="blank.html">Регистрация</a>
+			<div>
+			    <img src="img/avatar.svg" width="20" height="18" alt="Аватарка клиента">
+			    <p>Равшан Джамшутович</p>
+			    <a href="blank.html"></a>
+			    <a href="blank.html">Мои заказы</a>
+			    <a href="blank.html">Личный кабинет</a>
+			</div>
 		</section>
 		<nav>	
             <ul>
@@ -40,12 +45,160 @@
 	
 	<main>
 	
+	    <ul>
+            <li>
+                <a href="index.html"></a>
+            </li>
+            <li>
+                <a href="catalog.html">КАТАЛОГ</a>
+            </li>
+			<li>
+                <a href="catalog.html">ИНСТРУМЕНТ</a>
+            </li>
+            <li>
+                ПЕРФОРАТОРЫ
+            </li>
+        </ul>
+	
+	    <h1>ПЕРФОРАТОРЫ</h1>
+		
+        <section>
+            <h2>Фильтр товаров</h2>
+            <!-- Здесь будет форма фильтра -->
+        </section>
+
+        <section>
+            <h2>Список товаров</h2>
+			<div>
+			    <h3>СОРТИРОВКА</h3>
+                <!-- Здесь будет форма сортировки -->
+			</div>
+			<div>
+			    <ul>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a>
+						<span>30500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a>
+						<span>30500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a>
+						<span>30500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 3000</h3>
+					</a>
+						<span>22500 Р.</span>
+						<button type="button">15500 Р.</button>					
+				</li>
+								<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a>
+						<span>30500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 2000</h3>
+					</a>
+						<span></span>
+						<button type="button">12500 Р.</button>					
+				</li>
+								<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 3000</h3>
+					</a>
+						<span>22500 Р.</span>
+						<button type="button">15500 Р.</button>					
+				</li>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+					</a>
+						<span>30500 Р.</span>
+						<button type="button">25500 Р.</button>					
+				</li>
+				<li>
+				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+					<span>NEW</span>
+					<button type="button">КУПИТЬ</button>	
+					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="blank.html">
+						<h3>Перфоратор BOSCH BFG 2000</h3>
+					</a>
+						<span></span>
+						<button type="button">12500 Р.</button>					
+				</li>				
+			</ul>
+			</div>
+			<div>
+			    <ul>
+                    <li><a>1</a></li>
+                    <li><a href="blank.html">2</a></li>
+					<li><a href="blank.html">3</a></li>
+                </ul>
+				<a href="blank.html">СЛЕДУЮЩАЯ</a>
+			</div>
+        </section>
+		
+		<section>
+		    <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+			<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+               Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+               В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+		</section>
+	
 	</main>
 	
 	<footer>
 	
 	<nav>
-	    <a><img src="img/index-logo.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
+	    <a href="index.html"><img src="img/index-logo.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
 		<ul>
             <li><a href="blank.html">Компания</a></li>
 			<li><a href="blank.html">Новости</a></li>
@@ -106,16 +259,15 @@
     </section>
 	
     <section>
-        <h2>Как до нас добраться</h2>
-        <!-- Здесь будет карта -->
+        <h2>Товар добавлен в ЗАКЛАДКИ</h2>
         <button type="button">Закрыть</button>
     </section>
 	
 	<section>
-        <h2>Здесь Вы можете задать свой вопрос</h2>
-        <!-- Здесь будет форма обратной связи -->
+        <h2>Товар добавлен в КОРЗИНУ</h2>
         <button type="button">Закрыть</button>
     </section>
+
 
   </body>
 </html>
