--- a/catalog.html
+++ b/catalog.html
@@ -9,17 +9,19 @@
     <header>
 	    <section>
             <a href="index.html"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
-			<button type="button">Поиск:</button>
+			<form>
+                <p>Поиск:</p><input type="search" name="q">
+            </form>
 			<a href="blank.html">Закладки: 0</a>
 			<a href="blank.html">Корзина: 10</a>
 			<a href="blank.html">Оформить заказ</a>
 		</section>
 		<section>
-		    <p>Интернет-магазин<br>
-			   строительных материалов<br>
+		    <p>Интернет-магазин
+			   строительных материалов
 			   и инструментов для ремонта</p>
 			<p>
-			    <a href="tel:+78125550555">+7 (812) 555-05-55</a><br>
+			    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
 			<div>
@@ -32,7 +34,7 @@
 		</section>
 		<nav>	
             <ul>
-                <li><a>Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
                 <li><a href="blank.html">Компания</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="blank.html">Новости</a></li>
@@ -56,7 +58,7 @@
                 <a href="catalog.html">ИНСТРУМЕНТ</a>
             </li>
             <li>
-                ПЕРФОРАТОРЫ
+                <a>ПЕРФОРАТОРЫ</a>
             </li>
         </ul>
 	
@@ -78,8 +80,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
@@ -89,8 +91,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
@@ -100,8 +102,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
@@ -111,8 +113,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
@@ -122,8 +124,8 @@
 								<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
@@ -133,8 +135,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
@@ -144,8 +146,8 @@
 								<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
@@ -155,8 +157,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
@@ -166,8 +168,8 @@
 				<li>
 				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
 					<span>NEW</span>
-					<button type="button">КУПИТЬ</button>	
-					<button type="button">В ЗАКЛАДКИ</button>	
+					<a href="#">КУПИТЬ</a>	
+					<a href="#">В ЗАКЛАДКИ</a>	
 					<a href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
@@ -210,8 +212,8 @@
 	
 	<section>
 	    <p>
-		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-			<a href="tel:+78125550555">+7 (812) 555-05-55</a><br>			
+		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+			<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
 	    </p>
 		<ul>
             <li><a href="blank.html">Материалы</a></li>
@@ -222,7 +224,7 @@
 	</section>
 	
 	<section>
-	    <p>© 2010–2019 Компания «Техномарт»<br>
+	    <p>© 2010–2019 Компания «Техномарт»
 		   Все права защищены</p>
 		<ul>
             <li><a href="#">Вконтакте</a></li>
