--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <header>
 	    <section>
             <a><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
-			<button type="button">Поиск:</button>
+			<form>
+                <p>Поиск:</p><input type="search" name="q">
+            </form>
 			<a href="blank.html">Закладки: 0</a>
 			<a href="blank.html">Корзина: 0</a>
 			<a href="blank.html">Оформить заказ</a>
 		</section>
 		<section>
-		    <p>Интернет-магазин<br>
-			   строительных материалов<br>
+		    <p>Интернет-магазин
+			   строительных материалов
 			   и инструментов для ремонта</p>
 			<p>
-			    <a href="tel:+78125550555">+7 (812) 555-05-55</a><br>
+			    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
 			<div>
@@ -184,7 +186,7 @@
 		
 		<section>
 			<h2>Сервисы</h2>
-			<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+			<p>Хороший интернет-магазин отличается от плохого не только ценами!
 				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 			
 			<div>
@@ -192,9 +194,9 @@
 				<label for='delivery'>Доставка</label>
 				<div>
 					<h3>Доставка</h3>
-					<p>Мы с удовольствием доставим ваш товар прямо<br> 
-						к вашему подъезду совершенно бесплатно!<br>
-						Ведь мы неплохо заработаем,<br> 
+					<p>Мы с удовольствием доставим ваш товар прямо
+						к вашему подъезду совершенно бесплатно!
+						Ведь мы неплохо заработаем,
 						поднимая его на ваш этаж!</p>
 				</div>
 
@@ -218,7 +220,7 @@
 		    <div>
 			    <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
 				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-                <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+                <p>Мы можем доставить ваш товар в самые отдаленные точки России!
                    Техномарт работает со многими транспортными компаниями:</p>
 				<ul>
 				    <li>Деловые линии</li>
@@ -254,8 +256,8 @@
 	
 	<section>
 	    <p>
-		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-			<a href="tel:+78125550555">+7 (812) 555-05-55</a><br>			
+		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+			<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
 	    </p>
 		<ul>
             <li><a href="blank.html">Материалы</a></li>
@@ -266,7 +268,7 @@
 	</section>
 	
 	<section>
-	    <p>© 2010–2019 Компания «Техномарт»<br>
+	    <p>© 2010–2019 Компания «Техномарт»
 		   Все права защищены</p>
 		<ul>
             <li><a href="#">Вконтакте</a></li>
