--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</title>
   </head>
-  <body>
+  <body class="page-body">
 
-    <header>
-	    <section>
-            <a><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
-			<form>
+    <header class="main-header">
+	    <section class="main-header-section1">
+            <a class="main-header-logo"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
+			<form class="main-header-search">
                 <p>Поиск:</p><input type="search" name="q">
             </form>
-			<a href="blank.html">Закладки: 0</a>
-			<a href="blank.html">Корзина: 0</a>
-			<a href="blank.html">Оформить заказ</a>
+			<a class="header-link-bookmarks" href="blank.html">Закладки: 0</a>
+			<a class="header-link-basket" href="blank.html">Корзина: 0</a>
+			<a class="header-link-order" href="blank.html">Оформить заказ</a>
 		</section>
-		<section>
-		    <p>Интернет-магазин
+		<section class="main-header-section2">
+		    <p class="header-section2-title">Интернет-магазин
 			   строительных материалов
 			   и инструментов для ремонта</p>
-			<p>
-			    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+			<p class="header-section2-contacts">
+			    <a class="header-section2-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
-			<div>
-			<a href="blank.html">Вход</a>
-			<a href="blank.html">Регистрация</a>
+			<div class="header-section2-login">
+			<a class="header-section2-login-link" href="blank.html">Вход</a>
+			<a class="header-section2-reg-link" href="blank.html">Регистрация</a>
 			</div>
 		</section>
-		<nav>	
-            <ul>
+		<nav class="main-navigation">	
+            <ul class="site-navigation">
                 <li><a>Главная</a></li>
                 <li><a href="blank.html">Компания</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
