проименовал классы промо-блока и блока популярных товаров в main главной страницы

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			    <a class="header-section2-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
-			<div class="header-section2-login">
+			<div class="header-section2-authorization">
 			<a class="header-section2-login-link" href="blank.html">Вход</a>
 			<a class="header-section2-reg-link" href="blank.html">Регистрация</a>
 			</div>
@@ -42,28 +42,28 @@
        </nav>
 	</header>
 	
-	<main>
+	<main class="main">
 	
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</h1>
 		
-		<section>
-		    <ul>
-                <li>				    
+		<section class="main-promo">
+		    <ul class="main-promo-list">
+                <li class="main-promo-item">				    
 				    <h2>Материалы</h2>
 					<a href="blank.html">на любой вкус</a>					
 				</li>
-		        <li>				    
+		        <li class="main-promo-item">				    
 				    <h2>Инструмент</h2>
 					<a href="blank.html">на все случаи</a>					
 				</li>
-				<li>				    
+				<li class="main-promo-item">				    
 				    <h2>Техника</h2>
 					<a href="blank.html">для стройки</a>					
 				</li>
-				<li>
+				<li class="main-promo-slider">
 					<input type='radio' id='123' name='123'>
 				    <label for='123'></label>
-                    <div>
+                    <div class="main-promo-slide">
 					    <h2>..........</h2>
 					    <p>............</p>
 					    <a href="catalog.html">открыть каталог</a>
@@ -72,32 +72,32 @@
 
 					<input type='radio' id='124' name='124' checked>
 				    <label for='124'></label>
-                    <div>
+                    <div class="main-promo-slide">
 					    <h2>Перфораторы</h2>
 					    <p>Настоящие мужские игрушки</p>
 					    <a href="catalog.html">открыть каталог</a>
 						<img src="img/2.svg" width="620" height="266" alt="Фото рабочего с перфоратором">
 					</div>	
 				</li>
-				<li>				    
+				<li class="main-promo-item">				    
 				    <h2>Скидки 50%</h2>
 					<a href="blank.html">на 350 товаров</a>					
 				</li>
-				<li>				    
+				<li class="main-promo-item">				    
 				    <h2>Доставка</h2>
 					<a href="blank.html">бесплатно</a>					
 				</li>
 			</ul>
 		</section>
 		
-		<section>
-			<div>
+		<section class="main-product">
+			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
 				<a href="blank.html">все популярные товары</a>
 			</div>
-			<ul>
-				<li>
-					<a href="blank.html">
+			<ul class="main-product-list">
+				<li class="main-product-item">
+					<a class="main-product-item-link" href="blank.html">
 						<img src="img/3.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
 						<span>NEW</span>
 						<h3>Перфоратор BOSCH BFG 9000</h3>
@@ -105,8 +105,8 @@
 						<span>32500 Р.</span>
 						<button type="button">25500 Р.</button>					
 				</li>
-				<li>
-					<a href="blank.html">
+				<li class="main-product-item">
+					<a class="main-product-item-link" href="blank.html">
 						<img src="img/4.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 						<span>NEW</span>
 						<h3>Перфоратор BOSCH BFG 3000</h3>
@@ -114,8 +114,8 @@
 						<span>22500 Р.</span>
 						<button type="button">15500 Р.</button>					
 				</li>
-				<li>
-					<a href="blank.html">
+				<li class="main-product-item">
+					<a class="main-product-item-link" href="blank.html">
 						<img src="img/5.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 						<span>NEW</span>
 						<h3>Перфоратор BOSCH BFG 6000</h3>
@@ -123,8 +123,8 @@
 						<span>30500 Р.</span>
 						<button type="button">25500 Р.</button>					
 				</li>
-				<li>
-					<a href="blank.html">
+				<li class="main-product-item">
+					<a class="main-product-item-link" href="blank.html">
 						<img src="img/6.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 						<span>NEW</span>
 						<h3>Перфоратор BOSCH BFG 2000</h3>
