проименовал классы блоков производители, сервисы и информация о компании main главной страницы

--- a/index.html
+++ b/index.html
@@ -135,48 +135,48 @@
 			</ul>
 		</section>
 		
-		<section>
-			<div>
+		<section class="main-producer">
+			<div class="main-producer-header">
 				<h2>Популярные производители:</h2>
 				<a href="blank.html">все производители</a>
 			</div>
-			<ul>
-				<li>
+			<ul class="main-producer-list">
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/7.svg" width="220" height="145" alt="Логотип компании BOSCH">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/8.svg" width="220" height="145" alt="Логотип компании MAKITA">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/9.svg" width="220" height="145" alt="Логотип компании DeWALT">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/10.svg" width="220" height="145" alt="Логотип компании ИНТЕРСКОЛ">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/11.svg" width="220" height="145" alt="Логотип компании HITACHI">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/12.svg" width="220" height="145" alt="Логотип компании LG">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/13.svg" width="220" height="145" alt="Логотип компании AEG">
 					</a>
 				</li>
-				<li>
+				<li class="main-producer-item">
 					<a href="blank.html">
 						<img src="img/14.svg" width="220" height="145" alt="Логотип компании METABO">
 					</a>
@@ -184,15 +184,15 @@
 			</ul>
 		</section>
 		
-		<section>
+		<section class="main-services">
 			<h2>Сервисы</h2>
 			<p>Хороший интернет-магазин отличается от плохого не только ценами!
 				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 			
-			<div>
+			<div class="main-services-list">
 				<input type='radio' id='delivery' name='delivery' checked>
 				<label for='delivery'>Доставка</label>
-				<div>
+				<div class="main-services-item">
 					<h3>Доставка</h3>
 					<p>Мы с удовольствием доставим ваш товар прямо
 						к вашему подъезду совершенно бесплатно!
@@ -202,35 +202,35 @@
 
 				<input type='radio' id='guarantee' name='guarantee'>
 				<label for='guarantee'>Гарантия</label>
-				<div>
+				<div class="main-services-item">
 					<h3>Гарантия</h3>
 					<p></p>
 				</div>
 
 				<input type='radio' id='credit' name='credit'>
 				<label for='credit'>Кредит</label>
-				<div>
+				<div class="main-services-item">
 					<h3>Кредит</h3>
 					<p></p>
 				</div>
 			</div>
 		</section>
 		
-		<section>
-		    <div>
+		<section class="main-info">
+		    <div class="main-info-text">
 			    <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
 				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
                 <p>Мы можем доставить ваш товар в самые отдаленные точки России!
                    Техномарт работает со многими транспортными компаниями:</p>
-				<ul>
-				    <li>Деловые линии</li>
-					<li>Автотрейдинг</li>
-					<li>ЖелДорЭкспедиция</li>
+				<ul class="main-info-text-list">
+				    <li class="main-info-text-item">Деловые линии</li>
+					<li class="main-info-text-item">Автотрейдинг</li>
+					<li class="main-info-text-item">ЖелДорЭкспедиция</li>
 				</ul>
-				<a href="blank.html">Подробнее о компании</a>
+				<a class="main-info-text-link" href="blank.html">Подробнее о компании</a>
 			</div>
 			
-			<div>
+			<div class="main-info-map">
 			    <h2>КОНТАКТЫ</h2>
 				<p>Вы можете забрать товар сами,<br>
                    заехав в наш офис:</p>
