подправил классы в шапке главной страницы

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   </head>
   <body class="page-body">
 
-    <header class="main-header">
-	    <section class="main-header-section1">
-            <a class="main-header-logo"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
-			<form class="main-header-search">
+    <header class="header">
+	    <section class="header-section1">
+            <a class="header-logo"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
+			<form class="header-search">
                 <p>Поиск:</p><input type="search" name="q">
             </form>
 			<a class="header-link-bookmarks" href="blank.html">Закладки: 0</a>
 			<a class="header-link-basket" href="blank.html">Корзина: 0</a>
 			<a class="header-link-order" href="blank.html">Оформить заказ</a>
 		</section>
-		<section class="main-header-section2">
+		<section class="header-section2">
 		    <p class="header-section2-title">Интернет-магазин
 			   строительных материалов
 			   и инструментов для ремонта</p>
@@ -29,8 +29,8 @@
 			<a class="header-section2-reg-link" href="blank.html">Регистрация</a>
 			</div>
 		</section>
-		<nav class="main-navigation">	
-            <ul class="site-navigation">
+		<nav class="header-navigation">	
+            <ul class="header-navigation-list">
                 <li><a>Главная</a></li>
                 <li><a href="blank.html">Компания</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
