--- a/index.html
+++ b/index.html
@@ -241,36 +241,31 @@
 		
     </main>
 	
-	<footer>
+	<footer class="footer">
 	
-	<nav>
-	    <a><img src="img/index-logo.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
-		<ul>
+        <nav class="footer-navigation">
+	        <a class="footer-navigation-logo"><img src="img/index-logo.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
+		    <p>
+				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+				<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
+			</p>
+		<ul class="footer-navigation-list">
             <li><a href="blank.html">Компания</a></li>
 			<li><a href="blank.html">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="blank.html">Доставка</a></li>
             <li><a href="blank.html">Контакты</a></li>
-        </ul>
-	</nav>
-	
-	<section>
-	    <p>
-		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-			<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
-	    </p>
-		<ul>
             <li><a href="blank.html">Материалы</a></li>
 			<li><a href="blank.html">Техника</a></li>
             <li><a href="blank.html">Инструмент</a></li>
             <li><a href="blank.html">Спецпредложения</a></li>
         </ul>
-	</section>
+	    </nav>
 	
-	<section>
+	    <section class="footer-socials">
 	    <p>© 2010–2019 Компания «Техномарт»
 		   Все права защищены</p>
-		<ul>
+		<ul class="footer-socials-list">
             <li><a href="#">Вконтакте</a></li>
             <li><a href="#">Фейсбук</a></li>
             <li><a href="#">Инстаграм</a></li>
@@ -281,7 +276,7 @@
         <p>Разработано -
         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
-	</section>
+	    </section>
 	
 	</footer>
 	
