прописал стили последнего блока в main на главной

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
                 <p>Мы можем доставить ваш товар в самые отдаленные точки России!
                    Техномарт работает со многими транспортными компаниями:</p>
 				<ul class="main-info-text-list">
-				    <li class="main-info-text-item">Деловые линии</li>
-					<li class="main-info-text-item">Автотрейдинг</li>
-					<li class="main-info-text-item">ЖелДорЭкспедиция</li>
+				    <li class="main-info-text-item"><div class="red-line"></div>Деловые линии</li>
+					<li class="main-info-text-item"><div class="red-line"></div>Автотрейдинг</li>
+					<li class="main-info-text-item"><div class="red-line"></div>ЖелДорЭкспедиция</li>
 				</ul>
-				<a class="link-button main-info-text-link" href="blank.html">Подробнее о компании</a>
+				<div class="link-button main-info-text-link"><a href="#">Подробнее о компании</a></div>
 			</div>
 			
 			<div class="main-info-map">
@@ -246,7 +246,7 @@
 				<p>Вы можете забрать товар сами,<br>
                    заехав в наш офис:</p>
 				<a href="blank.html"><img src="img/map.jpeg" width="300" height="158" alt="Карта с нашим адресом"></a>
-				<a class="link-button" href="blank.html">Заблудились? Напишите нам!</a>
+				<div class="link-button main-info-map-link"><a href="blank.html">Заблудились? Напишите нам!</a></div>
 			</div>
 		</section>
 		
